# SAM-Playground

./: .gitignore  README.md  pyproject.toml
scripts/: download.sh  download_pretrained.sh  inference.cmd
src/: getting_started.py  inference.py
