[tool.poetry]
name = "template-python"
version = "0.0.1"
description = ""
authors = ["chatflip <oo.chat.flip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
opencv-python = "^4.8.1.78"
pycocotools = "^2.0.7"
matplotlib = "^3.8.2"
onnxruntime = "^1.16.3"
onnx = "^1.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.5"
mypy = "1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
